--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,13 @@
 
 	<style>
 		body {
-			background-color: white;
+			margin: 0;
+			background-color: #93DCFF;
+			background-image: linear-gradient(125deg, #93DCFF, #c1e0f2, #93DCFF);
+			background-repeat: no-repeat;
+			min-height: 100vh;
+			font-family: raleway, helvetica, arial, sans-serif;
+			color: #303438;
 		}
 		.table {
 			margin: auto;
@@ -14,16 +20,21 @@
 			height: calc(50vw / 7 * 6);
 			position: relative;
 			z-index: 1;
+			line-height: 0;
 		}
-		.row {
-			position: relative;
-			width: 100%;
-			height: calc(100% / 6);
-		}
-		.cell {
+		.col {
 			position: relative;
 			height: 100%;
 			width: calc(100% / 7);
+			display: inline-block;
+		}
+		.col:hover .hole {
+			box-shadow: 0 0 0 50px #1583EF;
+		}
+		.cell {
+			position: relative;
+			width: 100%;
+			height: calc(100% / 6);
 			display: inline-block;
 			overflow: hidden;
 		}
@@ -46,11 +57,30 @@
 		.game-link {
 			display: block;
 		}
+		.status .recommend {
+			font-weight: bold;
+		}
+		.btn {
+			border: 1px solid white;
+			border: 1px solid rgba(255, 255, 255, 0.6);
+			display: inline-block;
+			padding: 0.5em 1.5em;
+		}
+		a {
+			color: inherit;
+			text-decoration: none;
+		}
+		a:hover {
+			border-bottom: 1px solid inherit;
+		}
 	</style>
 </head>
 <body>
 	<div id="app"></div>
 	<script src='gun.js'></script>
 	<script src='bundle.js'></script>
+	<style>
+		@import url(https://fonts.googleapis.com/css?family=Raleway);
+	</style>
 </body>
 </html>
