--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Connect-four</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<style>
 		body {
@@ -77,10 +78,25 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script src='gun.js'></script>
 	<script src='bundle.js'></script>
-	<style>
-		@import url(https://fonts.googleapis.com/css?family=Raleway);
-	</style>
+
+	<!-- Raleway font import -->
+	<script type="text/javascript">
+	  WebFontConfig = {
+	    google: {
+				families: [
+					'Raleway::latin'
+				]
+			}
+	  };
+	  (function() {
+	    var wf = document.createElement('script');
+	    wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+	    wf.type = 'text/javascript';
+	    wf.async = 'true';
+	    var s = document.getElementsByTagName('script')[0];
+	    s.parentNode.insertBefore(wf, s);
+	  })();
+	</script>
 </body>
 </html>
