Add player color selection menu.
Instead of popping up a modal dialog, it uses a react component.

--- a/www/index.html
+++ b/www/index.html
@@ -46,10 +46,10 @@
 			margin: 10%;
 			border-radius: 50%;
 		}
-		.red {
+		.player1 {
 			background-color: red;
 		}
-		.blue {
+		.player2 {
 			background-color: blue;
 		}
 		input.valid-false {
