Fix gun sync issue
For whatever reason, gun isn't working when imported through babel and
webpack. Weird. Instead, I've imported it as a global in a <script> tag.
I'll see about tracking it down and seeing how to fix it with a PR.

--- a/www/index.html
+++ b/www/index.html
@@ -78,6 +78,7 @@
 </head>
 <body>
 	<div id="app"></div>
+	<script src='/gun.js'></script>
 	<script src='bundle.js'></script>
 
 	<!-- Raleway font import -->
