Switch to sass-loader, add game resets, code cleaning.
Instead of embedding the css rules in the html page, it's now being
managed by webpack and the react components that need it.
A game reset function has been added to reset game state. Since the game
list just loads pointers, CreateGame will think a game is safe and end
up loading an old game and nothing works and people are angry and hunt
me down with pitchforks. Instead, when flushing a game, it'll reset the
turn state and current occupants. Safe again!

--- a/www/index.html
+++ b/www/index.html
@@ -4,77 +4,6 @@
 	<meta charset="UTF-8">
 	<title>Connect-four</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<style>
-		body {
-			margin: 0;
-			background-color: #93DCFF;
-			background-image: linear-gradient(125deg, #93DCFF, #c1e0f2, #93DCFF);
-			background-repeat: no-repeat;
-			min-height: 100vh;
-			font-family: raleway, helvetica, arial, sans-serif;
-			color: #303438;
-		}
-		.table {
-			margin: auto;
-			width: 50vw;
-			height: calc(50vw / 7 * 6);
-			position: relative;
-			z-index: 1;
-			line-height: 0;
-		}
-		.col {
-			position: relative;
-			height: 100%;
-			width: calc(100% / 7);
-			display: inline-block;
-		}
-		.col:hover .hole {
-			box-shadow: 0 0 0 50px #1583EF;
-		}
-		.cell {
-			position: relative;
-			width: 100%;
-			height: calc(100% / 6);
-			display: inline-block;
-			overflow: hidden;
-		}
-		.hole {
-			box-shadow: 0 0 0 50px #2593FF;
-			height: 80%;
-			width: 80%;
-			margin: 10%;
-			border-radius: 50%;
-		}
-		.player1 {
-			background-color: red;
-		}
-		.player2 {
-			background-color: blue;
-		}
-		input.valid-false {
-			border: 1px solid red;
-		}
-		.game-link {
-			display: block;
-		}
-		.status .recommend {
-			font-weight: bold;
-		}
-		.btn {
-			border: 1px solid white;
-			border: 1px solid rgba(255, 255, 255, 0.6);
-			display: inline-block;
-			padding: 0.5em 1.5em;
-		}
-		a {
-			color: inherit;
-			text-decoration: none;
-		}
-		a:hover {
-			border-bottom: 1px solid inherit;
-		}
-	</style>
 </head>
 <body>
 	<div id="app"></div>
@@ -82,22 +11,15 @@
 	<script src='bundle.js'></script>
 
 	<!-- Raleway font import -->
-	<script type="text/javascript">
-	  WebFontConfig = {
+	<script src='https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js' async></script>
+	<script>
+	  window.WebFontConfig = {
 	    google: {
 				families: [
 					'Raleway::latin'
 				]
 			}
 	  };
-	  (function() {
-	    var wf = document.createElement('script');
-	    wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-	    wf.type = 'text/javascript';
-	    wf.async = 'true';
-	    var s = document.getElementsByTagName('script')[0];
-	    s.parentNode.insertBefore(wf, s);
-	  })();
 	</script>
 </body>
 </html>
